src/app/modules/pro/channel/list/list.component.scss
m-pro--channel-list {
  display: block;
  padding: 0 32px;

  h1.m-proChannelList__title {
    margin: 24px 0;
    padding: 0;
    text-transform: uppercase;
    font-size: 24px;
    font-weight: 300;
    letter-spacing: 2px;
    line-height: 1.25;
  }

  m-pro--channel--categories {
    margin: 16px 0 32px;

    @media screen and (max-width: $max-mobile) {
      display: none;
    }
  }

  .m-proChannelList__tools {
    letter-spacing: 1px;
    width: 85%;
    margin: 0 auto;

    .m-proChannelListTools__searchResult {
      font-weight: 300;
      color: var(--m-pro--text-color);
      font-size: 20px;
    }
  }

  .m-proChannelList__content {
    width: 85%;
    margin: 0 auto;
    justify-content: center;

    @media screen and (max-width: $max-mobile) {
      width: 100%;
    }

    & > i.material-icons {
      font-size: 100px;
      margin-top: 100px;
      height: fit-content;
    }
  }

  .m-proChannelListContent__noContent {
    max-width: 200px;
    border-radius: 4px;
    font-size: 14px;
    font-weight: 600;
    padding: 8px;
    margin: 0 auto;
    text-align: center;
    background-color: var(--m-pro--transparent-background-color);
    color: var(--m-pro--text-color);
  }

  .m-proChannelListContent__loadMore {
    width: 100%;
    font-size: 20px;
    padding: 16px;
    margin-top: 32px;
    cursor: pointer;
    text-align: center;
    font-weight: 300;
    box-sizing: border-box;
    color: var(--m-pro--text-color);
    background-color: var(--m-pro--transparent-background-color);

    &.m-proChannelListContent__noMore {
      cursor: initial;
    }
  }

  ul.m-proChannelListContent__list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 24px;
    list-style: none;
    padding: 0;

    @media screen and (max-width: $max-mobile) {
      grid-template-columns: 100%;
    }

    &.m-proChannelListContent__normalList {
      grid-template-columns: 100%;

      & > li {
        width: 500px;
        justify-self: center;

        @media screen and (max-width: $min-tablet) {
          width: 100%;
        }

        minds-activity {
          min-width: 100%;
        }
      }
    }

    & > li {
      display: flex;
      justify-content: center;
      align-items: flex-start;

      m-newsfeed__entity {
        width: 100%;
        height: 100%;

        .m-groups--tile {
          width: 100%;
          height: 100%;

          h3,
          i {
            color: #444 !important;
          }

          .m-groups--tile-block {
            margin-top: 0;
          }

          .m-groups--tile-buttons {
            padding: 0 $minds-padding * 2;
          }
        }
      }

      & > video {
        width: 250px;
        max-width: 100%;
      }
    }
  }

  .m-proChannelList__loader {
    text-align: center;
    margin-top: 32px;
  }
}

